--- a/.github/workflows/triton_ascend.yml
+++ b/.github/workflows/triton_ascend.yml
@@ -27,7 +27,7 @@ env:
   PIP_DISABLE_PIP_VERSION_CHECK: "1"
 
 jobs:
-  tirton_ascend:
+  build-llvm:
     name: Build · Test · Package
     runs-on: ${{ inputs.runner || 'linux-arm64-npu-1' }}
     container: 
@@ -35,6 +35,9 @@ jobs:
       env:
         HF_ENDPOINT: https://hf-mirror.com
       options: --user root
+    strategy:
+      matrix:
+        python-version: ["3.9", "3.10", "3.11"]
     steps:
       - name: Show NPU info
         run: |
@@ -48,77 +51,48 @@ jobs:
           sed -i 's|ports.ubuntu.com|mirrors.tuna.tsinghua.edu.cn|g' /etc/apt/sources.list
           pip config set global.index-url https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple
 
-      - name: Show environment info
+     steps:
+      - name: Install Build Deps
         run: |
-          uname -a
-          python3 --version || true
-          which python || true
+          sudo apt-get update
+          sudo apt-get install -y clang lld ninja-build
+      
+      - name: Build and Package LLVM
+        run: make build-llvm 
+        
+      - name: Cache LLVM Tarball
+        uses: actions/cache@v4
+        with:
+          path: llvm-*.tar.gz
+          key: llvm-${{ hashFiles('llvm-hash.txt') }}
 
-      - name: Install Python base deps
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+          
+      - name: Build Triton Wheel
         run: |
-          python -m pip install --upgrade pip
-          pip install setuptools wheel pytest
-
-      - name: Install project dependencies
-        run: |
-          if [ -f requirements.txt ]; then
-            pip install -r requirements.txt
-          fi
-
-      # ========================
-      # LLVM / Toolchain build
-      # ========================
-      - name: Build LLVM
-        run: |
-          # 对应 Makefile 中 llvm / build-llvm
-          # 如果之前是 make llvm，也可以直接用 make
-          if [ -f scripts/build_llvm.sh ]; then
-            bash scripts/build_llvm.sh
-          fi
-
-      # ========================
-      # Project build
-      # ========================
-      - name: Build project
-        run: |
-          # 对应 Makefile 的 build target
-          if [ -f setup.py ]; then
-            python setup.py build
-          else
-            make build
-          fi
-
-      # ========================
-      # Tests
-      # ========================
-      - name: Run tests
-        run: |
-          if [ -d tests ]; then
-            pytest -v
-          fi
-
-      # ========================
-      # Package / Wheel
-      # ========================
-      - name: Build wheel
-        run: |
-          if [ -f setup.py ]; then
-            python setup.py bdist_wheel
-          fi
-
-      - name: Upload wheel artifacts
-        if: always()
+          make install-dev-reqs
+          make package PYTHON=python${{ matrix.python-version }}
+          
+      - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: wheels
+          name: triton-wheel-${{ matrix.python-version }}
           path: dist/*.whl
 
-      # ========================
-      # obsutil (optional)
-      # ========================
-      - name: Prepare obsutil
-        if: github.event_name == 'workflow_dispatch'
-        run: |
-          curl -L -o obsutil.tar.gz \
-            https://obs-community.obs.cn-north-4.myhuaweicloud.com/obsutil/obsutil_linux_amd64.tar.gz
-          tar xf obsutil.tar.gz
+  # docker-publish:
+  #   if: github.event_name == 'push'
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - name: Login to Quay.io
+  #       uses: docker/login-action@v3
+  #       with:
+  #         registry: quay.io
+  #         username: ${{ secrets.QUAY_USER }}
+  #         password: ${{ secrets.QUAY_PASSWD }}
+          
+  #     - name: Build and Push Docker Image
+  #       run: make image_build
